networkpolicy/networkpolicy__basic_kafka_setup__prometheus__internet__any__ingress__ports__3000-9090__nr63__lines16.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus--internet--any--ingress--ports--3000-9090--nr63
  namespace: prometheus
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 3000
      port: 3000
    - protocol: TCP
    - protocol: TCP
      port: 3000
